feat: add qor/transition for order status && refactor code
