# routers/admin_api/v1/orders.go
@@ -12,16 +12,13 @@ import (
 	"time"
 )
 
-type DeliveryOrderParams struct {
-	CartItemIDs  []int  `json:"item_ids" binding:"required,gt=0"`
-	AddressID    int    `json:"address_id" binding:"required"`
-	ExpressID    int    `json:"express_id" binding:"required"`
-	BuyerMessage string `json:"buyer_message"`
+type ShipOrderParams struct {
+	ExpressNo string `json:"express_no" binding:"required`
 }
 
 type QueryOrderParams struct {
 	utils.Pagination
-	Status          []int      `json:"q[status_in]"`
+	State           []string   `json:"q[state_in]"`
 	Order_no        string     `json:"q[order_no_cont]"`
 	Created_at_gteq *time.Time `json:"q[created_at_gteq]"`
 	Created_at_lteq *time.Time `json:"q[created_at_lteq]"`
@@ -30,12 +27,41 @@ type QueryOrderParams struct {
 // @Summary 订单发货
 // @Produce  json
 // @Tags 后台订单管理
-// @Param id query DeliveryOrderParams true "order id"
+// @Param id path integer true "order id"
+// @Param params body ShipOrderParams true "发货参数"
 // @Success 200 {object} apiHelpers.Response
-// @Router /admin_api/v1/orders/{id}/deliver [post]
+// @Router /admin_api/v1/orders/{id}/ship [post]
 // @Security ApiKeyAuth
-func DeliveryOrder(c *gin.Context) {
+func ShipOrder(c *gin.Context) {
+	var order models.Order
+	var err error
+	order.ID, _ = strconv.Atoi(c.Param("id"))
 
+	err = models.FindResource(&order, Query{Preloads: []string{"Express"}})
+	if err != nil {
+		apiHelpers.ResponseError(c, e.ERROR_NOT_EXIST, err)
+		return
+	}
+
+	var ship ShipOrderParams
+	if err = c.ShouldBindJSON(&ship); err != nil {
+		apiHelpers.ResponseError(c, e.INVALID_PARAMS, err)
+		return
+	}
+
+	logistic := models.Logistic{
+		OrderID:        order.ID,
+		ExpressCompany: order.Express.Name,
+		ExpressCode:    order.Express.Code,
+		ExpressNo:      ship.ExpressNo,
+	}
+
+	err = models.SaveResource(&logistic)
+	if err != nil {
+		apiHelpers.ResponseError(c, e.INVALID_PARAMS, err)
+		return
+	}
+	apiHelpers.ResponseSuccess(c, logistic)
 }
 
 // @Summary 获取订单列表
@@ -67,8 +93,7 @@ func GetOrders(c *gin.Context) {
 // @Security ApiKeyAuth
 func GetOrder(c *gin.Context) {
 	var order models.Order
-	id, _ := strconv.Atoi(c.Param("id"))
-	order.ID = id
+	order.ID, _ = strconv.Atoi(c.Param("id"))
 
 	err := models.FindResource(&order, Query{Preloads: []string{"OrderItems"}})
 	if err != nil {
@@ -76,5 +101,31 @@ func GetOrder(c *gin.Context) {
 		return
 	}
 
+	apiHelpers.ResponseSuccess(c, order)
+}
+
+// @Summary 后台支付订单
+// @Produce  json
+// @Tags 后台订单管理
+// @Param id path int true "order id"
+// @Success 200 {object} apiHelpers.Response
+// @Router /admin_api/v1/orders/{id}/pay [post]
+// @Security ApiKeyAuth
+func PayOrder(c *gin.Context) {
+	var order models.Order
+	order.ID, _ = strconv.Atoi(c.Param("id"))
+
+	err := models.FindResource(&order, Query{})
+	if err != nil {
+		apiHelpers.ResponseError(c, e.ERROR_NOT_EXIST, err)
+		return
+	}
+	err = order.Pay()
+	if err != nil {
+		apiHelpers.ResponseError(c, e.INVALID_PARAMS, err)
+		return
+	}
+	// reload
+	models.FindResource(&order, Query{})
 	apiHelpers.ResponseSuccess(c, order)
 }
